--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -1,3 +1,8 @@
+@function black($opacity){
+    @return rgba(black, $opacity)
+}
+
+
 
 .hero-image{
     width: 100%;
@@ -5,34 +10,86 @@
     display: block;
     margin-top: 70.56px;
 
+    @media screen and (min-width: 1000px) {
+        height: 55rem;
+    }
+
 }
 
-.my-card{
+.my-card-title{
     border-radius: 0%;
     .house-title{
         .house-status{
             margin-left: 20px;
             font-size: 1.3rem;
+        
         }
+      
     }
+    @media screen and (min-width: 1000px){
+        background: black(0.7) !important;
+        position: absolute;
+        z-index: 1;
+        top: 400px;
+        left: 201px;
+    } 
 }
-
-.hero-details{
+.my-card-details{
     
-    list-style-type: none;
-    padding: 0;
-    font-size: 1.2rem;
-    font-weight: bold;
-    .hero-subtitle{
+        padding: 0;
+        font-size: .8rem;
+        font-weight: bold;
 
-        display: inline;
+    // .hero-details{
+    //     // list-style-type: none;
+    //     padding: 0;
+    //     font-size: 1.2rem;
+    //     font-weight: bold;
+    //     li{
+    //         @media screen and (min-width: 1000px) {
+    //             // float: left;
+    //         }
+    //     }
+        
+    //     span{
+    //         font-size: 1.5rem;
+    //         margin: 10px 10px 10px 0;
+    //     }
+    // }
+
+
+
+    .hero-details{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        
+        .details{
+            display: flex;
+            flex-direction: column;
+            margin-left: 50px;
+            margin-right: 15px;
+
+            ul{
+                list-style: none;
+                padding: 0;
+            } 
+        }
+        span{
+            font-size: 2rem;
+            float: left;
+        }
+
     }
-    span{
-        font-size: 1.5rem;
-        margin: 10px 10px 10px 0;
+
+        @media screen and (min-width: 1000px){
+        position: absolute;
+        z-index: 1;
+        top: 515px;
+        left: 201px;
     }
 }
-
 .location-marker{
     margin-left: 5px;
 }
+
