--- a/src/components/property/property.styles.scss
+++ b/src/components/property/property.styles.scss
@@ -1,4 +1,23 @@
 .property-card{
-    width: 18.75rem;
-    height: 25rem;
+    width: 20rem;
+    height: 27rem;
+    border-radius: 10px;
+    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.05);
+    margin-bottom: 20px;
+
+
+   img{
+       width: 100%;
+       height: 15rem;
+       border-radius: 10px 10px 0 0;
+        object-fit: cover;
+    }
+
+    .property-card-body{
+        padding: 20px;
+    }
+}
+
+.property-card:hover{
+    box-shadow: 0 1px 20px rgba(0, 0, 0, 0.1);
 }
